<resources>
    <string name="app_name">TrabajoPracticoFinal</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Configuraciones</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_button">Iniciar Sesión</string>
    <string name="register_button">Crear cuenta</string>
    <string name="academy_app">Aplicación Académica</string>
    <string name="welcome">Bienvenido!</string>
    <string name="user_label">Usuario</string>
    <string name="password_label">Contraseña</string>
    <string name="configuration">Configuración</string>
    <string name="myAccount">Mi cuenta</string>
    <string name="privacity">Privacidad</string>
    <string name="registro_titulo_crear_usuario">Crear usuario</string>
    <string name="registro_hint_nombre">Nombre</string>
    <string name="registro_hint_apellido">Apellido</string>
    <string name="registro_hint_documento">Documento</string>
    <string name="registro_hint_contrasena">Contraseña</string>
    <string name="registro_hint_confirmar_contrasena">Confirmar contraseña</string>
    <string name="registro_boton_crear_usuario">Registrarse</string>
    <string name="registro_ya_tengo_cuenta">Ya tengo cuenta</string>
    <string name="notifications">Notificaciones</string>
    <string name="usage_policy">Política de uso</string>
    <string name="exit">Salir</string>
    <string name="nombre_usuario">Nombre Usuario</string>
    <string name="document">Documento: 11.111.111</string>
</resources>